[package]
name = "actori-web"
version = "2.0.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori web is a simple, pragmatic and extremely fast web framework for Rust."
readme = "README.md"
keywords = ["actori", "http", "web", "framework", "async"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-web.git"
documentation = "https://docs.rs/actori-web/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "compress", "secure-cookies"]

[badges]
travis-ci = { repository = "actori/actori-web", branch = "master" }
codecov = { repository = "actori/actori-web", branch = "master", service = "github" }

[lib]
name = "actori_web"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "actoriwc",
  "actori-http",
  "actori-cors",
  "actori-files",
  "actori-framed",
  "actori-session",
  "actori-identity",
  "actori-multipart",
  "actori-web-actors",
  "actori-web-codegen",
  "test-server",
]

[features]
default = ["compress", "failure"]

# content-encoding support
compress = ["actori-http/compress", "actoriwc/compress"]

# sessions feature, session require "ring" crate and c compiler
secure-cookies = ["actori-http/secure-cookies"]

failure = ["actori-http/failure"]

# openssl
openssl = ["actori-tls/openssl", "actoriwc/openssl", "open-ssl"]

# rustls
rustls = ["actori-tls/rustls", "actoriwc/rustls", "rust-tls"]

[dependencies]
actori-codec = "0.2.0"
actori-service = "1.0.5"
actori-utils = "1.0.6"
actori-router = "0.2.4"
actori-rt = "1.0.0"
actori-server = "1.0.1"
actori-testing = "1.0.0"
actori-macros = "0.1.1"
actori-threadpool = "0.3.1"
actori-tls = "1.0.0"

actori-web-codegen = "0.2.0"
actori-http = "1.0.1"
actoriwc = { version = "1.0.1", default-features = false }

bytes = "0.5.3"
derive_more = "0.99.2"
encoding_rs = "0.8"
futures = "0.3.1"
fxhash = "0.2.1"
log = "0.4"
mime = "0.3"
net2 = "0.2.33"
pin-project = "0.4.6"
regex = "1.3"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
time = "0.1.42"
url = "2.1"
open-ssl = { version="0.10", package = "openssl", optional = true }
rust-tls = { version = "0.16.0", package = "rustls", optional = true }

[dev-dependencies]
actori = "0.9.0"
rand = "0.7"
env_logger = "0.6"
serde_derive = "1.0"
brotli2 = "0.3.2"
flate2 = "1.0.13"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[patch.crates-io]
actori-web = { path = "." }
actori-http = { path = "actori-http" }
actori-http-test = { path = "test-server" }
actori-web-codegen = { path = "actori-web-codegen" }
actori-cors = { path = "actori-cors" }
actori-identity = { path = "actori-identity" }
actori-session = { path = "actori-session" }
actori-files = { path = "actori-files" }
actori-multipart = { path = "actori-multipart" }
actoriwc = { path = "actoriwc" }
