[package]
name = "actori-http"
version = "1.0.1"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori http primitives"
readme = "README.md"
keywords = ["actori", "http", "framework", "async", "futures"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-web.git"
documentation = "https://docs.rs/actori-http/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "failure", "compress", "secure-cookies"]

[lib]
name = "actori_http"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["actori-tls/openssl", "actori-connect/openssl"]

# rustls support
rustls = ["actori-tls/rustls", "actori-connect/rustls"]

# enable compressison support
compress = ["flate2", "brotli2"]

# failure integration. actori does not use failure anymore
failure = ["fail-ure"]

# support for secure cookies
secure-cookies = ["ring"]

[dependencies]
actori-service = "1.0.5"
actori-codec = "0.2.0"
actori-connect = "1.0.2"
actori-utils = "1.0.6"
actori-rt = "1.0.0"
actori-threadpool = "0.3.1"
actori-tls = { version = "1.0.0", optional = true }

base64 = "0.11"
bitflags = "1.2"
bytes = "0.5.3"
copyless = "0.1.4"
chrono = "0.4.6"
derive_more = "0.99.2"
either = "1.5.3"
encoding_rs = "0.8"
futures-core = "0.3.1"
futures-util = "0.3.1"
futures-channel = "0.3.1"
fxhash = "0.2.1"
h2 = "0.2.1"
http = "0.2.0"
httparse = "1.3"
indexmap = "1.3"
lazy_static = "1.4"
language-tags = "0.2"
log = "0.4"
mime = "0.3"
percent-encoding = "2.1"
pin-project = "0.4.6"
rand = "0.7"
regex = "1.3"
serde = "1.0"
serde_json = "1.0"
sha-1 = "0.8"
slab = "0.4"
serde_urlencoded = "0.6.1"
time = "0.1.42"

# for secure cookie
ring = { version = "0.16.9", optional = true }

# compression
brotli2 = { version="0.3.2", optional = true }
flate2 = { version = "1.0.13", optional = true }

# optional deps
fail-ure = { version = "0.1.5", package="failure", optional = true }

[dev-dependencies]
actori-server = "1.0.1"
actori-connect = { version = "1.0.2", features=["openssl"] }
actori-tls = { version = "1.0.0", features=["openssl"] }
futures = "0.3.1"
env_logger = "0.6"
serde_derive = "1.0"
open-ssl = { version="0.10", package = "openssl" }
rust-tls = { version="0.16", package = "rustls" }
