[package]
name = "actori-web-actors"
version = "2.0.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actori actors support for actori web framework."
readme = "README.md"
keywords = ["actori", "http", "web", "framework", "async"]
homepage = "https://actori.t42x.net"
repository = "https://github.com/actori/actori-web.git"
documentation = "https://docs.rs/actori-web-actors/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actori_web_actors"
path = "src/lib.rs"

[dependencies]
actori = "0.9.0"
actori-web = "2.0.0"
actori-http = "1.0.1"
actori-codec = "0.2.0"
bytes = "0.5.2"
futures = "0.3.1"
pin-project = "0.4.6"

[dev-dependencies]
actori-rt = "1.0.0"
env_logger = "0.6"
