[package]
name = "actori-web-codegen"
version = "0.2.0"
description = "Actori web proc macros"
readme = "README.md"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full", "parsing"] }
proc-macro2 = "^1"

[dev-dependencies]
actori-rt = { version = "1.0.0" }
actori-web = { version = "2.0.0-rc" }
futures = { version = "0.3.1" }
